<!--
  ~ Copyright (c) 2019. Rob Holmes. This file is part of the Resume app of Rob Holmes, an Android
  ~ Developer from Hampshire, United Kingdom, and is intended to demonstrate Rob's skills in an open
  ~ manner. It therefore should not be used for any other purpose, or any other person's Resume, as
  ~ this would be deceptive and misleading.
  ~ If you find this code anywhere other than https://github.com/robholmes/Resume then it's probably
  ~ a sign someone has copied it.
  -->

<resources>
    <string name="app_name">Resume</string>

    <string name="title_summary">Summary</string>
    <string name="title_technical">Technical</string>
    <string name="title_leadership">Leadership</string>
    <string name="title_experience">Experience</string>
    <string name="title_interests">Interests</string>

    <string name="action_settings">Settings</string>

    <string name="retry">Retry</string>
    <string name="not_found_error">Resume data not found</string>
    <string name="http_error">Server error fetching Resume data</string>
    <string name="unknown_error">Unknown error fetching Resume data</string>
</resources>
